the worst commit in the world.. a massive content update with section changes, moved and deleted files and some redundancy too.  Please dont think bad of me because of this commit, as I have been up all night getting this workshop finished.  Sorry.